[tool.poetry]
name = "picktoss-question-generation-worker"
version = "0.1.0"
description = ""
authors = ["Earthquakoo <cream5343@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.34.64"
pytz = "^2024.1"
openai = "^1.14.1"
requests = "^2.31.0"
pymysql = "^1.1.0"
fastapi = {extras = ["all"], version = "^0.110.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
